added effect label with animation

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -12,4 +12,14 @@
         android:layout_height="match_parent"
         android:id="@+id/camera_surface_view"/>
 
+
+    <TextView
+        android:id="@+id/effect_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:textSize="21sp"
+        android:textColor="@android:color/white"
+        android:visibility="gone"/>
+
 </FrameLayout>
