--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -22,4 +22,30 @@
         android:textColor="@android:color/white"
         android:visibility="gone"/>
 
+
+    <TextView
+        android:id="@+id/effect_rect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/crazy_rect"
+        android:textSize="22sp"
+        android:layout_gravity="bottom|left"/>
+
+    <TextView
+        android:id="@+id/effect_triangle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/crazy_triangle"
+        android:textSize="22sp"
+        android:layout_gravity="bottom|right"/>
+
+
+    <TextView
+        android:id="@+id/effect_none"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/camera_effect_normal"
+        android:textSize="22sp"
+        android:layout_gravity="bottom|center_horizontal"/>
+
 </FrameLayout>
