--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -13,6 +13,14 @@
         android:id="@+id/camera_surface_view"/>
 
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@android:color/transparent"
+        android:layout_gravity="center_horizontal|bottom"/>
+
+
     <TextView
         android:id="@+id/effect_textview"
         android:layout_width="wrap_content"
@@ -23,29 +31,14 @@
         android:visibility="gone"/>
 
 
-    <TextView
-        android:id="@+id/effect_rect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/crazy_rect"
-        android:textSize="22sp"
-        android:layout_gravity="bottom|left"/>
 
-    <TextView
-        android:id="@+id/effect_triangle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/crazy_triangle"
-        android:textSize="22sp"
-        android:layout_gravity="bottom|right"/>
-
-
-    <TextView
-        android:id="@+id/effect_none"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/camera_effect_normal"
-        android:textSize="22sp"
-        android:layout_gravity="bottom|center_horizontal"/>
+    <ImageView
+        android:id="@+id/settings_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="top|right"
+        android:layout_marginTop="7dp"
+        android:layout_marginRight="7dp"
+        android:src="@drawable/ic_settings_white_24dp"/>
 
 </FrameLayout>
